--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dexie": "^4.0.1",
+    "dexie-react-hooks": "^1.1.7",
     "dotenv": "^16.0.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.5.0",
@@ -16,7 +18,8 @@
     "react-router-dom": "6.0.2",
     "react-router-hash-link": "^2.4.3",
     "react-sticky-box": "^2.0.5",
-    "react-ticker": "^1.3.2"
+    "react-ticker": "^1.3.2",
+    "universal-cookie": "^7.1.0"
   },
   "scripts": {
     "start": "vite",
