--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "6.0.2",
     "react-router-hash-link": "^2.4.3",
+    "react-simple-snackbar": "^1.1.11",
     "react-sticky-box": "^2.0.5",
     "react-ticker": "^1.3.2",
     "universal-cookie": "^7.1.0"
