--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dexie-react-hooks": "^1.1.7",
     "dotenv": "^16.0.1",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-datepicker": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
