--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dexie": "^4.0.1",
     "dexie-react-hooks": "^1.1.7",
     "dotenv": "^16.0.1",
+    "fuse.js": "^7.0.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-datepicker": "^4.5.0",
