--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "6.0.2",
     "react-router-hash-link": "^2.4.3",
