--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.13.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
@@ -27,6 +28,7 @@
     "react-simple-snackbar": "^1.1.11",
     "react-sticky-box": "^2.0.5",
     "react-ticker": "^1.3.2",
+    "react-transition-group": "^4.4.5",
     "universal-cookie": "^7.1.0"
   },
   "scripts": {
